<resources>
    <string name="app_name">PrimeraApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sumar">Sumar</string>
    <string name="cambiartexto">CambiarTexto</string>
    <string name="texto">Texto +/-</string>
    <string name="alineartexto">AlinearTexto</string>
    <string name="imagen">Imagen</string>
    <string name="galer_a">Galería</string>
    <string name="cambiarcolor">CambiarColor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>