<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/sumar" />
        <item
            android:icon="@drawable/ic_baseline_brush_24"
            android:title="@string/cambiarcolor" />
        <item
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/galer_a" />
        <item
            android:icon="@drawable/ic_baseline_image_24"
            android:title="@string/imagen" />
        <item
            android:icon="@drawable/ic_baseline_text_rotation_none_24"
            android:title="@string/alineartexto" />
        <item
            android:icon="@drawable/ic_baseline_text_fields_24"
            android:title="@string/texto" />
        <item
            android:icon="@drawable/ic_baseline_text_rotate_vertical_24"
            android:title="@string/cambiartexto" />
    </group>
</menu>